<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:transitionName="logo"
                    android:layout_gravity="center"
                    android:src="@drawable/ux_dribbble_logo"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/resgister"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="24sp"
                    android:fontFamily="@font/open_sans_bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_userEmail_register"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText_userEmail_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/component_space_bottom_medium"
                        android:maxLines="1"
                        android:ems="1"
                        android:inputType="textEmailAddress"
                        android:hint="@string/correo_electr_nico_o_tel_fono"
                        android:fontFamily="@font/open_sans_regular"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_userPassword_register"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText_userPassword_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/component_space_bottom_medium"
                        android:maxLines="1"
                        android:ems="1"
                        android:inputType="textPassword"
                        android:hint="@string/txtfiel_password"
                        android:fontFamily="@font/open_sans_regular"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_userName_register"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText_userName_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/component_space_bottom_medium"
                        android:maxLines="1"
                        android:ems="1"
                        android:inputType="textAutoComplete"
                        android:hint="@string/usuario"
                        android:fontFamily="@font/open_sans_regular"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_userPhone_register"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText_userPhone_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/component_space_bottom_medium"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:ems="1"
                        android:inputType="phone"
                        android:hint="@string/phone"
                        android:fontFamily="@font/open_sans_regular"/>

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:id="@+id/button_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fab_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/component_space_bottom_medium"
                    android:foreground="@drawable/button_ripple_animation"
                    style="@style/button.uxdribbble"
                    android:elevation="4dp">

                    <TextView
                        android:id="@+id/text_btn_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/create_account"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/progress_bar_btn_sign_up"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                </FrameLayout>

                <LinearLayout android:id="@+id/linearLayout_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/component_space_bottom_medium"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="¿Ya tienes una cuenta?"
                        android:textSize="14sp"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sing_in"
                        android:textSize="14sp"
                        android:textColor="@color/primaryDarkColor"
                        android:fontFamily="@font/open_sans_bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/reveal_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:alpha="1"
        android:visibility="invisible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>