<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:weightSum="10"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="logo"
                android:layout_gravity="center"
                android:src="@drawable/ux_dribbble_logo"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/login"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/component_space_bottom_medium"
                android:fontFamily="@font/open_sans_bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/component_space_bottom_medium"
                    android:maxLines="1"
                    android:ems="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/correo_electr_nico_o_tel_fono"
                    android:fontFamily="@font/open_sans_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_userPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/component_space_bottom_medium"
                    android:maxLines="1"
                    android:ems="1"
                    android:inputType="textPassword"
                    android:hint="@string/txtfiel_password"
                    android:fontFamily="@font/open_sans_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/button_sing_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/component_space_bottom_medium"
                android:foreground="@drawable/button_ripple_animation"
                style="@style/button.uxdribbble"
                android:elevation="4dp">

                <TextView
                    android:id="@+id/text_btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sing_in"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progress_bar_btn_sign_in"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

            <LinearLayout android:id="@+id/linearLayout_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_space_bottom_medium"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¿No tienes una cuenta?"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/open_sans_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_up"
                    android:textSize="14sp"
                    android:textColor="@color/primaryDarkColor"
                    android:fontFamily="@font/open_sans_bold"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/component_space_bottom_medium"
                android:background="@color/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <ImageButton android:id="@+id/imageButton_sign_in_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/facebook_icon"
                    android:foreground="@drawable/button_ripple_animation"
                    android:background="@drawable/button_border">
                </ImageButton>

                <ImageButton android:id="@+id/imageButton_sign_in_google"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/google_icon"
                    android:foreground="@drawable/button_ripple_animation"
                    android:background="@drawable/button_border">
                </ImageButton>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/reveal_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:alpha="1"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>